schema builder fix

--- a/src/app/utils/structure-field-properties/structure-field-properties.component.html
+++ b/src/app/utils/structure-field-properties/structure-field-properties.component.html
@@ -47,7 +47,7 @@
 
         <div class="w-100 justify-content-center" *ngIf="!(isDataFormat || checkStateModel())">
           <div class="font-16 fw-500 mt-40">Properties</div>
-          <div class=" d-flex align-items-center w-100 py-3" [ngClass]="{'hover':canEdit}"
+          <div (click)="toggleCheck(formItem.get('properties.required'))" class=" d-flex align-items-center w-100 py-3" [ngClass]="{'hover':canEdit}"
             *ngIf="formItem.get('properties.required') && formItem.get('key').value !== '_self'">
             <odp-checkbox id="reqAttr" [edit]="{ status: canEdit }"
               (checkedChange)="toggleCheck(formItem.get('properties.required'))"
@@ -56,7 +56,7 @@
               class="ml-2 rounded-circle properties required d-flex justify-content-center align-items-center text-white fw-500 font-12">R</span>
             <span class="ml-2 text-dark font-14">Required</span>
           </div>
-          <div class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
+          <div (click)="toggleCheck(formItem.get('properties.createOnly'))" class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
             *ngIf="formItem.get('properties.createOnly') && formItem.get('key').value !=='_self'">
             <odp-checkbox id="createAttr" [edit]="{ status: canEdit }"
               (checkedChange)="toggleCheck(formItem.get('properties.createOnly'))"
@@ -65,7 +65,7 @@
               class="ml-2 rounded-circle properties create-only d-flex justify-content-center align-items-center text-white fw-500 font-12">C</span>
             <span class="ml-2 text-dark font-14">Create Only</span>
           </div>
-          <div class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
+          <div (click)="toggleCheck(formItem.get('properties.unique'))" class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
             *ngIf="formItem.get('properties.unique') && formItem.get('key').value !== '_self'">
             <odp-checkbox id="UniqAttr" [edit]="{ status: canEdit }"
               (checkedChange)="toggleCheck(formItem.get('properties.unique'))"
@@ -74,7 +74,7 @@
               class="ml-2 rounded-circle properties unique d-flex justify-content-center align-items-center text-white fw-500 font-12">U</span>
             <span class="ml-2 text-dark font-14">Unique</span>
           </div>
-          <div class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
+          <div (click)="toggleCheck(formItem.get('properties.password'))" class=" d-flex align-items-center pb-3" [ngClass]="{'hover':canEdit}"
             *ngIf="formItem.get('properties.password') && formItem.get('key').value !== '_self' && (formItem.get('properties._detailedType').value !== 'email' && form.get('properties._detailedType').value !== 'enum')">
             <odp-checkbox id="secureAttr" [edit]="{ status: canEdit }"
               (checkedChange)="toggleCheck(formItem.get('properties.password'))"
