--- a/src/app/utils/structure-field-properties/text-property/text-property.component.html
+++ b/src/app/utils/structure-field-properties/text-property/text-property.component.html
@@ -196,7 +196,7 @@
           </ng-container>
 
         </div>
-        <div class="col-12 mt-2">
+        <div class="col-12">
           <div class="font-12 text-secondary mb-2"
             *ngIf="form.get('properties.minlength') && form.get('properties.maxlength') && form.get('properties._detailedType').value==''">
             Min and max length of the attribute</div>
