--- a/src/app/home/app-manage/app-manage.component.scss
+++ b/src/app/home/app-manage/app-manage.component.scss
@@ -528,7 +528,9 @@ table {
 }
 
 .upload-section {
-  padding: 20px 0 20px 20px;
-  max-height: 60vh;
-  overflow-y: auto;
+  width: 340px;
+}
+
+.preview-section {
+  width: calc(100% - 340px);
 }
